# nix-zephyr-pico-playground

./: .clangd  .gitignore  README.md  compile_commands.json  flake.nix  justfile
applications/01_led_blink/: CMakeLists.txt  README.md  prj.conf
applications/01_led_blink/boards/: app.overlay
applications/01_led_blink/src/: blink.cpp  blink.hpp  main.cpp
applications/01_led_blink/tests/integration/: CMakeLists.txt
applications/01_led_blink/tests/integration/src/: main.cpp
applications/01_led_blink/tests/unit/: CMakeLists.txt  prj.conf
applications/01_led_blink/tests/unit/src/: main.cpp
applications/02_button/: prj.conf
applications/02_button/boards/: button.overlay
applications/02_button/src/: main.cpp
applications/03_button_driver/: CMakeLists.txt  prj.conf
applications/03_button_driver/boards/: rpi_pico.overlay
applications/03_button_driver/src/: main.cpp
applications/04_memory_arena/: prj.conf
applications/04_memory_arena/src/: main.cpp
applications/05_multi_threading/src/: main.cpp
applications/06_mutex/: CMakeLists.txt
applications/06_mutex/boards/: app.overlay
applications/06_mutex/src/: main.cpp
applications/07_time_sensitive_multi_threading/src/: main.cpp
applications/08_usb_keyboard/: CMakeLists.txt  prj.conf
applications/08_usb_keyboard/boards/: app.overlay
applications/08_usb_keyboard/src/: main.cpp
modules/: .gitignore
modules/button/: CMakeLists.txt
modules/button/drivers/: CMakeLists.txt  Kconfig
modules/button/zephyr/: module.yml
modules/hid_keyboard/: CMakeLists.txt  Kconfig
modules/hid_keyboard/include/: hid_keycodes.h  usb_hid_keyboard.h
modules/hid_keyboard/src/: usb_hid_keyboard.c
modules/rp2040_bootloader/: CMakeLists.txt  Kconfig
scripts/: generate_clangd.py
(+9 files in other folders)
